--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 <frameset cols="10%,*,10%">
-  <frame src="background-L.html" noresize="noresize">
+  <frame src="avoL.jpg" noresize="noresize">
   <frame src="middle.html" >
-  <frame src="background-R.html" noresize="noresize">
+  <frame src="avoR.jpg" noresize="noresize">
 </frameset>
 
 </html>
