--- a/middle.html
+++ b/middle.html
@@ -11,9 +11,11 @@ body {
 </style>
     </head>
     <body>
-        
-		<h4 color = "white"><small>Amir, Shayan Tom; Lee, Alex; Singh Komalvir</small></h4>
-		<div style=background-color:black>
+        	<div>
+			<h1 align="center">Avocado's Number</h1>
+			<h4><small>Authors: Amir, Shayan Tom; Lee, Alex; Singh Komalvir</small></h4>
+		</div>
+	    <div style=background-color:black>
         <svg></svg>
         
         <script src="https://d3js.org/d3.v4.min.js"></script>
