--- a/middle.html
+++ b/middle.html
@@ -12,7 +12,7 @@ body {
     </head>
     <body>
         	<div>
-			<h1 align="center">Avocado's Number</h1>
+			<h1 align="center">Get Help, Don't Commit Suicide</h1>
 			<h4><small>Authors: Amir, Shayan Tom; Lee, Alex; Singh Komalvir</small></h4>
 		</div>
 	    <div style=background-color:black>
