--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <frameset cols="10%,*,10%">
-  <frame src="avoL.jpg" scrolling="no" noresize="noresize">
+  <frame src="Bourke-White-1937-Left.jpg" scrolling="no" noresize="noresize">
   <frame src="middle.html" >
-  <frame src="avoR.jpg" scrolling="no" noresize="noresize">
+  <frame src="Bourke-White-1937-Right.jpg" scrolling="no" noresize="noresize">
 </frameset>
 </html>
