--- a/middle.html
+++ b/middle.html
@@ -12,7 +12,7 @@ body {
     </head>
     <body>
         	<div>
-			<h1 align="center">Get Help, Don't Commit Suicide</h1>
+			<h1 align="center">The Greatest Depression</h1>
 			<h4><small>Authors: Amir, Shayan Tom; Lee, Alex; Singh Komalvir</small></h4>
 		</div>
 	    <div style=background-color:black>
@@ -21,10 +21,11 @@ body {
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="index.js"></script>
 		</div>
+	    <div style=background-color:white>
 		<h3>Rationale Behind Design:</h3>
 		<p>We chose our particular visual encoding through careful consideration, deciding between a scatter plot, a "sliding" bar graph, and a more primitive bar graph that highlights the difference in data by hovering them. We ultimately chose the last option, as the implementation seemed the most feasable and served our purpose of effectively highlighting nations with the highest suicide rate among this particular age group/gender. The interactive exploration portion that was created for the bar graph was a dotted horizontal line that appeared above the top of each bar to help the viewer see the differences between each country's rates. The number in each bar will change from the total rates to the differences of rates in comparison to the selected bar.</p>
 		<h3>Overview of Development</h3>
 		<p>The work was distributed evenly among team mebers. All three of our members were active in the data-selection, design choice, and implementation. Our development process was not very streamlined, with many back and forth decisions in terms of what our final visualization would look like and try to communicate. Thus, the actual selection of data was the least time-consuming part as we had a good understanding of the world bank data from our previous project. The most time-consuming aspect was the implementation using D3, javascript, and html. Switching between different types of graphs amounted to a total of 4 hours, before the final implementation of the bar graph. This served to be a rewarding project both as a team exericse, and as a real-life example of data visualization using libraries such as D3. </p>
-		
+		</div>
 	</body>
 </html>
