--- a/middle.html
+++ b/middle.html
@@ -22,6 +22,8 @@ body {
         <script src="index.js"></script>
 		</div>
 	    <div style=background-color:white>
+		    <h3>Overview</h3>
+		    <p>Depression is one of the major risk factors that could lead to suicide. An observation must be made about the rates of suicides in the generation of people born during one of the worst economic eras in America, which was dubbed "Thr Great Depression". The "Silent Generation" was a group of people born between the early 1920s and the mid 1940s. This group was born in one of the most turbulant times in America, and we are here to analyze what effects the Great Depression may have had on their development and how these factors may have contributed to the generation's rate of suicide</p>
 		<h3>Rationale Behind Design:</h3>
 		<p>We chose our particular visual encoding through careful consideration, deciding between a scatter plot, a "sliding" bar graph, and a more primitive bar graph that highlights the difference in data by hovering them. We ultimately chose the last option, as the implementation seemed the most feasable and served our purpose of effectively highlighting nations with the highest suicide rate among this particular age group/gender. The interactive exploration portion that was created for the bar graph was a dotted horizontal line that appeared above the top of each bar to help the viewer see the differences between each country's rates. The number in each bar will change from the total rates to the differences of rates in comparison to the selected bar.</p>
 		<h3>Overview of Development</h3>
