--- a/middle.html
+++ b/middle.html
@@ -20,6 +20,7 @@ body {
         
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="index.js"></script>
+		    <img src="mvf.png">
 		</div>
 	    <div style=background-color:white>
 		    <h3>Overview</h3>
