--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
-<frameset cols="10%,*,10%">
+<frameset cols="10%, "89%">
   <frame src="Bourke-White-1937-Left.jpg" scrolling="no" noresize="noresize">
   <frame src="middle.html" >
-  <frame src="Bourke-White-1937-Right.jpg" scrolling="no" noresize="noresize">
+
 </frameset>
   
 </html>
