--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <frameset cols="10%, "89%">
   <frame src="Bourke-White-1937-Left.jpg" scrolling="no" noresize="noresize">
-  <frame src="usmaptest.html" >
+  <frame src="middle.html" >
 
 </frameset>
   
