--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <frameset cols="10%, "89%">
-  <frame src="Bourke-White-1937-Left.jpg" scrolling="no" noresize="noresize">
+  <frame src="banner.jpg" scrolling="no" noresize="noresize">
   <frame src="middle.html" >
 
 </frameset>
